--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -20,3 +20,14 @@ body {
 .nav-link.active:hover{
     color: #0d6efd;
 }
+
+/* Reparaar el CSS de Bootstrap para que el footer no interfiera con otros elementos */
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  footer {
+    margin-top: 40px;
+  }
