--- a/FONTS/font_handler.css
+++ b/FONTS/font_handler.css
@@ -2,3 +2,8 @@
     font-family: "icefont";
     src: url("SnowFont.ttf");
 }
+
+h2{
+    font-family: icefont,Arial, Helvetica, sans-serif;
+    color: rgb(75, 175, 255)
+}
