--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -41,3 +41,9 @@ margin-bottom: 60px;
     max-width: 40%;
     margin: auto; 
   }
+
+.full-width-card {
+    max-width: none;
+    margin: 0;
+  }
+  
